[package]
name = "my"
version = "1.0.0"
authors = ["xuxy <xuxiaoyu2010@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
dotenv = "0.15.0"
urlencoding = "1.1.1"
md5 = "0.7.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
regex = "1"